<resources>
    <string name="app_name">Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dollar">$</string>
    <string name="buy_now">Buy now!</string>
    <string name="description_img">This is phone image</string>
    <string name="text_new">New</string>
    <string name="select_category">Select category</string>
    <string name="view_all">view all</string>
    <string name="best_seller">Best seller</string>
    <string name="see_more">see more</string>
    <string name="product_detail_title">Product detail</string>
    <string name="select_color_text">Select color and capacity</string>
    <string name="add_to_cart_text">Add to Cart $</string>
    <string name="tv_geo_text">Zihuatanejo, Gro</string>
    <string name="search">Search</string>
    <string name="explorer">Explorer</string>
    <string name="hot_sales">Hot sales</string>
    <string name="count_basket">2</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="my_cart">My Cart</string>
    <string name="add_address">Add address</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_my_cart">Add to cart</string>
    <string name="product_details">Product Detail</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string-array name="brand_phone_array">
        <item>Samsung</item>
        <item>IPhone</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="price_phone_array">
        <item>$0 - $10000</item>
        <item>$0 - $5000</item>
        <item>$5000 - $10000</item>
    </string-array>

    <string-array name="size_phone_array">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.8 inches</item>
        <item>0.0 to 6.8 inches</item>
    </string-array>
</resources>